--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "node --experimental-vm-modules --trace-warnings node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "jest": "^27.0.6"
   }
