--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.algotraining</groupId>
-    <artifactId>algotraining</artifactId>
+    <groupId>com.algorithms-and-data-structures</groupId>
+    <artifactId>algorithms-and-data-structures</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
